# zero2prod

./: Cargo.toml  Dockerfile
.github/workflows/: docker-build.yaml  general.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
