[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"
authors = ["Subhadeep Sengupta <www.subhadeepsengupta2002@gmail.com>"]

[lib]
path = "src/lib.rs"


[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
actix-web = "4.10.2"
tokio = { version = "*", features = ["full"] }
serde = { version = "1", features = ["derive"]}
config = "0.15"
uuid = {version = "*", features = ["v4"]}
chrono = "*"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
	"runtime-tokio",
	"tls-rustls-ring-webpki",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate"
	]

[dev-dependencies]
reqwest = "*"
